objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( DATE( 2000 , MONTH( DOB__c ) , DAY( DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( DOB__c   ),
     YEAR (Today()) - YEAR ( DOB__c   ) -1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>FirstName__c + &apos; &apos; +  LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <default>true</default>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mylist</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </filters>
        <label>Mylist</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Student Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>